{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 72,
  "lineage": "a9900c7a-1c1b-9935-e1f3-e6898b1cef8b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204463460498:internet-gateway/igw-793b4002",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-587c6822"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-587c6822"
                ]
              }
            ],
            "id": "igw-793b4002",
            "internet_gateway_id": "igw-793b4002",
            "owner_id": "204463460498"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204463460498:vpc/vpc-587c6822",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-7280611d",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0df74677",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-587c6822",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-97c053e9",
            "owner_id": "204463460498",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204463460498:vpc/vpc-587c6822",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-1f0e7162",
            "default_route_table_id": "rtb-97c053e9",
            "default_security_group_id": "sg-4b98056b",
            "dhcp_options_id": "dopt-0df74677",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-587c6822",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-97c053e9",
            "owner_id": "204463460498"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:204463460498:loadbalancer/tchedre-k8s-udagram-api-lb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "tchedre-k8s-udagram-api-lb-678635016.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTPS:6443/healthz",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tchedre-k8s-udagram-api-lb",
            "idle_timeout": 600,
            "instances": [
              "i-0329eb5ae1f99958e",
              "i-0850af4e8d1869755",
              "i-0a3a58a1cd748819b"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 6443,
                "instance_protocol": "tcp",
                "lb_port": 6443,
                "lb_protocol": "tcp"
              }
            ],
            "name": "tchedre-k8s-udagram-api-lb",
            "security_groups": [
              "sg-08b5bcb75e0af7130",
              "sg-0c07cabef44564954"
            ],
            "source_security_group": "204463460498/tchedre-k8s-udagram-api-lb",
            "source_security_group_id": "sg-0c07cabef44564954",
            "subnets": [
              "subnet-00cf5d74b5fd03e31",
              "subnet-060e03e91a96f2e0b",
              "subnet-06f16f722318228ea"
            ],
            "tags": {
              "Cluster": "tchedre-k8s-udagram",
              "kubernetes.io/cluster/tchedre-k8s-udagram": "shared"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.elb",
            "aws_subnet.public",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available",
            "data.aws_vpc.selected",
            "random_integer.cidr_block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c43b23f011ba5061",
            "arn": "arn:aws:ec2:us-east-1:204463460498:instance/i-04cb23a3633b5463d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04cb23a3633b5463d",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "tchedre-k8s-udagram-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a59c8d509b888e56",
            "private_dns": "ip-172-31-112-55.ec2.internal",
            "private_ip": "172.31.112.55",
            "public_dns": "ec2-3-237-196-32.compute-1.amazonaws.com",
            "public_ip": "3.237.196.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0f743d310649ef2b1",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "tchedre-k8s-udagram-common",
              "tchedre-k8s-udagram-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060e03e91a96f2e0b",
            "tags": {
              "Cluster": "tchedre-k8s-udagram",
              "Name": "tchedre-k8s-udagram-bastion",
              "kubernetes.io/cluster/tchedre-k8s-udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08b5bcb75e0af7130",
              "sg-0e79af174c6de5816"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.ssh",
            "aws_subnet.public",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available",
            "data.aws_vpc.selected",
            "random_integer.cidr_block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c43b23f011ba5061",
            "arn": "arn:aws:ec2:us-east-1:204463460498:instance/i-0a3a58a1cd748819b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "tchedre-k8s-udagram-host",
            "id": "i-0a3a58a1cd748819b",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "tchedre-k8s-udagram-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c33d5f1a3bf9df31",
            "private_dns": "ip-172-31-112-165.ec2.internal",
            "private_ip": "172.31.112.165",
            "public_dns": "ec2-3-228-23-157.compute-1.amazonaws.com",
            "public_ip": "3.228.23.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0ae847fa1f0e5a12c",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "tchedre-k8s-udagram-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060e03e91a96f2e0b",
            "tags": {
              "Name": "tchedre-k8s-udagram-cp-1",
              "kubernetes.io/cluster/tchedre-k8s-udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08b5bcb75e0af7130"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available",
            "data.aws_vpc.selected",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c43b23f011ba5061",
            "arn": "arn:aws:ec2:us-east-1:204463460498:instance/i-0850af4e8d1869755",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "tchedre-k8s-udagram-host",
            "id": "i-0850af4e8d1869755",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "tchedre-k8s-udagram-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e1468de1045d61b0",
            "private_dns": "ip-172-31-113-39.ec2.internal",
            "private_ip": "172.31.113.39",
            "public_dns": "ec2-18-212-169-119.compute-1.amazonaws.com",
            "public_ip": "18.212.169.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0be27bd36f6fc60c0",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "tchedre-k8s-udagram-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cf5d74b5fd03e31",
            "tags": {
              "Name": "tchedre-k8s-udagram-cp-2",
              "kubernetes.io/cluster/tchedre-k8s-udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08b5bcb75e0af7130"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available",
            "data.aws_vpc.selected",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c43b23f011ba5061",
            "arn": "arn:aws:ec2:us-east-1:204463460498:instance/i-0329eb5ae1f99958e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "tchedre-k8s-udagram-host",
            "id": "i-0329eb5ae1f99958e",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "tchedre-k8s-udagram-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08851380f87ede5bb",
            "private_dns": "ip-172-31-114-17.ec2.internal",
            "private_ip": "172.31.114.17",
            "public_dns": "ec2-54-146-201-34.compute-1.amazonaws.com",
            "public_ip": "54.146.201.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-012ffdcd145d2a537",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "tchedre-k8s-udagram-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f16f722318228ea",
            "tags": {
              "Name": "tchedre-k8s-udagram-cp-3",
              "kubernetes.io/cluster/tchedre-k8s-udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08b5bcb75e0af7130"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available",
            "data.aws_vpc.selected",
            "random_integer.cidr_block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204463460498:security-group/sg-08b5bcb75e0af7130",
            "description": "cluster common rules",
            "egress": [],
            "id": "sg-08b5bcb75e0af7130",
            "ingress": [],
            "name": "tchedre-k8s-udagram-common",
            "name_prefix": "",
            "owner_id": "204463460498",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "tchedre-k8s-udagram",
              "kubernetes.io/cluster/tchedre-k8s-udagram": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-587c6822"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204463460498:security-group/sg-0c07cabef44564954",
            "description": "kube-api firewall",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c07cabef44564954",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone to connect to tcp/6443",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "tchedre-k8s-udagram-api-lb",
            "name_prefix": "",
            "owner_id": "204463460498",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "tchedre-k8s-udagram"
            },
            "timeouts": null,
            "vpc_id": "vpc-587c6822"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204463460498:security-group/sg-0e79af174c6de5816",
            "description": "ssh access",
            "egress": [],
            "id": "sg-0e79af174c6de5816",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow incomming SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tchedre-k8s-udagram-ssh",
            "name_prefix": "",
            "owner_id": "204463460498",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "tchedre-k8s-udagram"
            },
            "timeouts": null,
            "vpc_id": "vpc-587c6822"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all outgoing traffic",
            "from_port": 0,
            "id": "sgrule-4135266112",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08b5bcb75e0af7130",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_self_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allow all incomming traffic from members of this group",
            "from_port": 0,
            "id": "sgrule-3405567160",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08b5bcb75e0af7130",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204463460498:subnet/subnet-060e03e91a96f2e0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.112.0/24",
            "id": "subnet-060e03e91a96f2e0b",
            "map_public_ip_on_launch": true,
            "owner_id": "204463460498",
            "tags": {
              "Cluster": "tchedre-k8s-udagram",
              "Name": "tchedre-k8s-udagram-us-east-1a",
              "kubernetes.io/cluster/tchedre-k8s-udagram": "shared"
            },
            "vpc_id": "vpc-587c6822"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_availability_zones.available",
            "data.aws_vpc.selected",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204463460498:subnet/subnet-00cf5d74b5fd03e31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.113.0/24",
            "id": "subnet-00cf5d74b5fd03e31",
            "map_public_ip_on_launch": true,
            "owner_id": "204463460498",
            "tags": {
              "Cluster": "tchedre-k8s-udagram",
              "Name": "tchedre-k8s-udagram-us-east-1b",
              "kubernetes.io/cluster/tchedre-k8s-udagram": "shared"
            },
            "vpc_id": "vpc-587c6822"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_availability_zones.available",
            "data.aws_vpc.selected",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:204463460498:subnet/subnet-06f16f722318228ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.114.0/24",
            "id": "subnet-06f16f722318228ea",
            "map_public_ip_on_launch": true,
            "owner_id": "204463460498",
            "tags": {
              "Cluster": "tchedre-k8s-udagram",
              "Name": "tchedre-k8s-udagram-us-east-1c",
              "kubernetes.io/cluster/tchedre-k8s-udagram": "shared"
            },
            "vpc_id": "vpc-587c6822"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_availability_zones.available",
            "data.aws_vpc.selected",
            "random_integer.cidr_block"
          ]
        }
      ]
    }
  ]
}